src/css/screen.css
/* ... */
.flip-card-back,
.flip-card-front {
    border-radius: 20px;
}

.flip-card-front {
    position: relative;
    background-color: var(--accent);
    color: var(--bg-primary);
    border: 6px solid var(--accent-secondary);
}

dl p {
    color: var(--bg-primary);
    text-align: center;
    font-weight: 500;
    transition: visibility var(--animation-duration);
    padding: 3rem 3rem 5rem 3rem;
}

dd input,dd .role-info-label,.flip-card-back {
    display: none;
}

/* Se il browser supporta la pseudo-classe :has() (anno>~2022) allora attiva il filp della cards altrimenti tienile nascoste*/
@supports selector(:has(a)) {
    dd:has(input:checked) .flip-card .flip-card-inner {
        transform: rotateX(180deg);
    }
    
    dd:has(input:checked) .flip-card .flip-card-back {
        visibility: visible;
    }
    
    dd:has(input:checked) .flip-card .flip-card-front p {
        visibility: hidden;
    }
    
    dd:has(input:checked) .flip-card .flip-card-front p+a {
        visibility: hidden;
    }

    .flip-card-back {
        visibility: hidden;
        display: flex;
        flex-direction: column;
        padding: 2rem;
        position: absolute;
        top: 0;
        width: 100%;
        height: 100%;
        -webkit-backface-visibility: hidden;
        backface-visibility: hidden;
        background-color: var(--accent-trinary);
        color: white;
        transition: visibility var(--animation-duration);
        transform: rotateX(180deg);
        border: 6px solid var(--accent);
    }
    
    .flip-card-back h3 {
        font-weight: 700;
        font-size: 1.8rem;
    }
    
    .flip-card-back ul {
        margin: auto;
        width: 100%;
        list-style-type: none;
    }
    
    .flip-card-back li {
        margin: 1rem;
        font-style: italic;
    }
    
    dd input {
        padding: 0;
        margin: 0;
        appearance: none;
        -webkit-appearance: none;
        outline: none;
        pointer-events: none;
        display: block;
        position: absolute;
        bottom: 50%;
    }
    
    dd:has(input:focus-visible) .role-info-label {
        border: 2px solid white;
    }
    
    dd:has(input:checked) .role-info-label {
        color: var(--bg-primary);
        background-color: var(--accent);
        box-shadow: inset 0px 4px 8px 1px rgba(0, 0, 0, 0.6);
        transform: scale(0.97);
    }
    
    dd .role-info-label {
        color: var(--text-color);
        background-color: var(--accent-trinary);
        border-radius: var(--radius-max);
        padding: 1rem;
        font-weight: 700;
        margin-top: 2rem;
        display: inline-block;
        cursor: pointer;
        user-select: none;
        transition: background-color 600ms, color 600ms, transform 600ms;
    }
}

.ribbon {
    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%, 5% 50%);
    background-color: var(--accent-secondary);
    position: absolute;
    bottom: 1.1rem;
    right: -1px;
    font-weight: 550;
    padding: .5rem 4rem .5rem 2rem;
    transition: visibility var(--animation-duration);
}

.ribbon a:link {
    border-color: var(--accent-secondary);
}

/* #endregion HOME PAGE CONTENT*/

/* ================================================== */

/* #region HOME PAGE WHY */
div#why {
    background-color: var(--accent-secondary);
}

div#why>div {
    display: flex;
    gap: 2rem;
}

div#why #why-desc {
    flex: 1;
    display: flex;
    flex-direction: column;
    background-color: var(--bg-secondary);
    border-radius: var(--radius-small);
    padding: 1rem;
}

div#why #why-desc h2 {
    margin-bottom: 3rem;
}

div#why #why-desc p {
    margin: auto;
    padding-bottom: 3rem;
}

div#why img {
    flex: 2;
    object-fit: cover;
    border-radius: var(--radius-small);
    width: 50%;
    height: auto;
}

div#why #why-desc a:link {
    color: var(--hypertext-link-color);
    border-color: var(--bg-secondary);
}

/* #endregion HOME PAGE WHY */

/* ================================================== */

/*#region CATALOGUE PAGE */
#search-fields {
    margin-bottom: 4rem;
}

#search-bar {
    margin-bottom: 1.3rem;
}

#search-bar::-webkit-search-cancel-button {
    margin-right: 1.5em;
    padding: 0.25em;
    filter: invert(100%);
}

#filters {
    padding: 2em 3em;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 2rem;
    margin-bottom: 2rem;
}

#filters label {
    font-size: 1rem;
}

.filter-param {
    flex: 1;
}

.filter-param p {
    text-align: center;
    margin-top: .5rem;
    font-weight: 500;
}

#search-btn {
    width: 100%;
    height: var(--button-height);
    font-size: var(--button-text);
    font-weight: 700;
    background-color: var(--accent);
}

select#ord-res {
    margin-bottom: 2em;
    width: 15em;
}

ul#recipe-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    list-style-type: none;
    margin-bottom: 3rem;
    row-gap: 4rem;
    column-gap: 1rem;
}

ul#recipe-list .recipe {
    width: 32%;
    min-width: 21em;
    height: 33em;
    border-radius: var(--radius-small);
    color: var(--text-color);
    background-color: var(--bg-secondary);
    text-align: right;
    position: relative;
    overflow: hidden;
    opacity: 0;
    transform: scale(.9);
    transition: opacity 500ms, transform 500ms;
}

#loader {
    height: 30px;
    aspect-ratio: 2.5;
    --_g: no-repeat radial-gradient(farthest-side,#ffffff 90%,#0000);
    background:var(--_g), var(--_g), var(--_g), var(--_g);
    background-size: 20% 50%;
    animation: loading 1s infinite linear; 
    margin: 10rem auto;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}
/* ... */

